--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><link rel="icon" href="perfectionrei_favicon.png" type="image/png" />
   <meta charset="UTF-8" />
   <title>Perfection Real Estate Investors | Multifamily Acquisitions & Off-Market Deals</title>
 
