--- a/index.html
+++ b/index.html
@@ -14,7 +14,23 @@
   <meta property="og:image" content="https://perfectionrei.com/og-image.jpg">
 
   <meta name="twitter:card" content="summary_large_image">
+<!-- SEO ENHANCEMENTS -->
+<meta name="author" content="Perfection Real Estate Investors LLC">
+<meta name="robots" content="index, follow">
+<meta name="googlebot" content="index, follow">
 
+
+
+
+<!-- Open Graph for Social & Google -->
+<meta property="og:title" content="Perfection Real Estate Investors | Multifamily Acquisitions & Off-Market Deals">
+<meta property="og:description" content="Precision real estate for serious investors. We source, underwrite, and acquire 4-20 unit multifamily deals in Philadelphia.">
+<meta property="og:url" content="https://perfectionrei.com/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://perfectionrei.com/og-image.jpg"> <!-- we will generate this -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Perfection REI | Multifamily Investments">
+<meta name="twitter:description" content="Direct-to-owner multifamily acquisitions. Operator-first deal execution.">
   <!-- When you add a real favicon file named favicon.ico to the repo root, this will start working -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
