--- a/index.html
+++ b/index.html
@@ -950,7 +950,8 @@
         Provide the address, current rents, seller details, and we’ll underwrite it quickly.
     </p>
 
-    <form action="https://formsubmit.co/d22384b1f719aab6a223f1cfc31243a2" method="POST" style="max-width:620px">
+    <form action="https://formsubmit.co/d22384b1f719aab6a223f1cfc31243a2" method="POST" style="max-width:620px;">
+<input type="hidden" name="_next" value="https://perfectionrei.com/success.html">
         <!-- FormSubmit settings -->
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_subject" value="New Deal Submission from PerfectionREI.com">
