--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head><link rel="icon" href="perfectionrei_favicon.png" type="image/png" />
   <meta charset="UTF-8" />
-  <title>Perfection Real Estate Investors | Multifamily Acquisitions & Off-Market Deals</title>
-
+  <title>Perfection REI | Property Investment Company in Philadelphia, PA</title>
   <meta name="description" content="Perfection REI sources, underwrites, and acquires 4–20 unit multifamily deals in and around Philadelphia. Investor-first, operator-led acquisitions. Submit your deal today.">
   <meta name="keywords" content="real estate investor, multifamily investing, sell my apartment building, off-market real estate, Philadelphia real estate, 4-20 unit deals, Malik Marell, Perfection REI">
 
