--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head><link rel="icon" href="perfectionrei_favicon.png" type="image/png" />
   <meta charset="UTF-8" />
   <title>Perfection REI | Property Investment Company in Philadelphia, PA</title>
-  <meta name="description" content="Perfection REI sources, underwrites, and acquires 4–20 unit multifamily deals in and around Philadelphia. Investor-first, operator-led acquisitions. Submit your deal today.">
-  <meta name="keywords" content="real estate investor, multifamily investing, sell my apartment building, off-market real estate, Philadelphia real estate, 4-20 unit deals, Malik Marell, Perfection REI">
-
+<meta name="keywords" content="property investment company, real estate investor Philadelphia, multifamily investing Philadelphia, off-market deals, sell my house fast Philadelphia, commercial real estate investor, Perfection REI" />
+  <meta name="description" content="Perfection REI is a trusted property investment company based in Philadelphia, PA. We buy houses in any condition and specialize in multifamily, commercial, and off-market real estate opportunities for sellers and investors." />
   <meta property="og:title" content="Perfection Real Estate Investors">
   <meta property="og:description" content="Precision real estate for serious investors. Multifamily acquisitions, off-market deals, underwriting, and operator-first strategy.">
   <meta property="og:url" content="https://perfectionrei.com/">
